# Tachyon

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  audit.toml  deny.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/actions/setup-bun/: action.yml
.github/actions/setup-rust/: action.yml
.github/actions/setup-ubuntu-deps/: action.yml
.github/scripts/: verify-signature-config.sh
.github/workflows/: ci.yml  fuzz.yml  release.yml
benches/: buffer_pool.rs  crypto_hash.rs  e2e_download.rs  e2e_http_real.rs  fragment_planning.rs
benches/support/: bench_server.rs  mod.rs
crates/amd-app/src/: commands.rs
crates/amd-core/src/: config.rs
crates/amd-engine/src/: downloader.rs  orchestrator.rs
crates/amd-hub/: Cargo.toml
crates/amd-hub/src/: api.rs  lib.rs
crates/amd-io/src/: iouring.rs  tokio_file.rs
crates/benches/: e2e_download.rs
crates/qf-app/: Cargo.toml
crates/qf-app/src/: commands.rs  lib.rs
crates/qf-core/: Cargo.toml
crates/qf-core/src/: lib.rs  test_harness.rs  traits.rs
crates/qf-crypto/src/: gpu.rs
crates/qf-engine/: Cargo.toml
crates/qf-engine/src/: connection.rs  downloader.rs  fragment.rs  lib.rs  orchestrator.rs
crates/qf-io/: Cargo.toml
crates/qf-io/src/: buffer.rs  iouring.rs  lib.rs  pipeline.rs  tokio_file.rs
crates/qf-p2sp/src/: dht.rs  lib.rs  source.rs
crates/qf-protocol/: Cargo.toml
crates/qf-protocol/src/: ftp.rs  http.rs  lib.rs  quic.rs
crates/qf-scheduler/src/: scheduler.rs
crates/qf-sniffer/src/: resources.rs
crates/qf-store/src/: lib.rs  recovery.rs  store.rs
crates/tachyon-app/: Cargo.toml  tauri.conf.json
crates/tachyon-app/capabilities/: default.json
crates/tachyon-app/src/: lib.rs  logging.rs  main.rs  task_store.rs
crates/tachyon-app/src/commands/: config_commands.rs  fragment_commands.rs  hub_commands.rs  mod.rs  progress_commands.rs  rate_limiter.rs  sniffer_commands.rs  states.rs  task_commands.rs  tracker_commands.rs
crates/tachyon-app/src/projection/: fragment_state_store.rs  mod.rs  progress_broker.rs
crates/tachyon-app/src/repository/: task_repository.rs
crates/tachyon-app/src/runtime/: chunk_reader_pool.rs  download_session.rs  download_supervisor.rs  mod.rs  panic_isolation.rs
crates/tachyon-app/src/service/: clipboard_watcher.rs  confirmation_service.rs  mod.rs  sniffer_service.rs  task_service.rs
crates/tachyon-app/src/service/task_service/: tests.rs
crates/tachyon-app/tests/: panic_log_e2e.rs
crates/tachyon-core/: Cargo.toml
crates/tachyon-core/src/: config.rs  download_source.rs  error.rs  event.rs  filename.rs  lib.rs  test_harness.rs  traits.rs  types.rs
crates/tachyon-crypto/: Cargo.toml
crates/tachyon-crypto/src/: cpu.rs  gpu.rs  lib.rs
crates/tachyon-engine/: Cargo.toml
crates/tachyon-engine/src/: bt_session.rs  bt_storage.rs  circuit_breaker.rs  connection.rs  downloader.rs  fragment.rs  http_client_registry.rs  lib.rs  mirror.rs  rate_limit.rs  storage_adapter.rs  tracker_source.rs
crates/tachyon-engine/tests/: chaos_test.rs
crates/tachyon-hub/: Cargo.toml
crates/tachyon-hub/src/: api.rs  classify.rs  lib.rs  token.rs
crates/tachyon-io/: Cargo.toml
crates/tachyon-io/src/: aligned_buf.rs  alloc.rs  buffer.rs  dir_sync.rs  iocp.rs  iouring.rs  lib.rs  pipeline.rs  storage.rs  tokio_file.rs  winio.rs
crates/tachyon-p2sp/: Cargo.toml
crates/tachyon-p2sp/src/: dht.rs  lib.rs
crates/tachyon-p2sp/src/dht/: kademlia.rs  kbucket.rs  node.rs  transport.rs
crates/tachyon-protocol/: Cargo.toml
crates/tachyon-protocol/src/: bt_progress.rs  ftp.rs  hls.rs  http.rs  lib.rs  magnet.rs  magnet_lifecycle.rs  magnet_lifecycle_tests.rs  quic.rs
crates/tachyon-scheduler/: Cargo.toml
crates/tachyon-scheduler/src/: concurrency_controller.rs  download_scheduler.rs  lib.rs  predictor.rs
crates/tachyon-sniffer/: Cargo.toml
crates/tachyon-sniffer/src/: capture.rs  lib.rs  resources.rs
crates/tachyon-store/: Cargo.toml
crates/tachyon-store/src/: lib.rs  recovery.rs  store.rs
docs/: architecture.md  user-guide.md
docs/aegis/plans/: 2026-07-12-deep-review-optimizations.md  2026-07-14-p0-6-7-8-object-hls-bt.md  2026-07-14-phase0-correctness-fixes.md  2026-07-22-audit-s01-s02-s04-implementation.md
docs/aegis/specs/: 2026-07-14-p0-6-7-8-object-hls-bt-design.md  2026-07-14-phase0-correctness-fixes.md  2026-07-15-audit-residual-http-correctness.md  2026-07-15-bt08-http05-hls03-bt18.md  2026-07-15-h04-delete-quiesce.md  2026-07-15-h05-snapshot-revision.md  2026-07-15-h06-pool-host-sem-toctou.md  2026-07-15-h07-iouring-send-cancel.md  2026-07-15-hls05-08-bt-udp-tr.md  2026-07-15-hls06-09-http15.md  2026-07-15-http-09-16-17.md  2026-07-15-http10-bt11-honesty.md  2026-07-15-http13-15-bt17.md  2026-07-15-p0-3-fragment-durable-sync.md  2026-07-15-sec002-006-path-auth.md  2026-07-15-sec004-hf-token-audience.md  2026-07-15-sec008-hf-auth-download.md  2026-07-15-sec009-012.md  2026-07-15-sec010-007-013.md  (+26 more)
docs/sdd/: librqbit-upgrade-and-pgo-eval.md  magnet-dead-swarm-resilience.md  magnet-speedup-limitations.md  perf-research.md
frontend/: .gitignore  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/.storybook/: main.ts  preview.tsx
frontend/e2e/: smoke.spec.ts
frontend/scripts/: lint-color-hardcode.ts
frontend/src/: App.tsx  index.css  main.tsx  theme-bootstrap.ts  types.ts
fuzz/: Cargo.toml
fuzz/corpus/config_parse/: valid.json
fuzz/corpus/file_metadata/: content_disposition.txt
fuzz/corpus/ipc_deserialize/: event.json  state.json
fuzz/corpus/url_safety/: http_url.txt  magnet.txt
fuzz/fuzz_targets/: config_parse.rs  file_metadata.rs  fragment_state_fuzz.rs  http_headers.rs  ipc_deserialize.rs  magnet_parse.rs  store_key_fuzz.rs  url_safety.rs
scripts/ci/: audit.sh  check-doc-drift.sh  coverage.sh  coverage_assert.py  miri.sh  mutants.sh  pgo.sh  preflight.sh  sign-release-artifacts.sh  version-check.sh
src/: cli_proxy.rs  lib.rs  main.rs
tests/: core_stability_recovery.rs  integration_test.rs  tokio_concurrency.rs
(+320 files in other folders)
