[workspace]
resolver = "2"
members = [
    "crates/tachyon-core",
    "crates/tachyon-engine",
    "crates/tachyon-scheduler",
    "crates/tachyon-io",
    "crates/tachyon-protocol",
    "crates/tachyon-sniffer",
    "crates/tachyon-crypto",
    "crates/tachyon-store",
    "crates/tachyon-hub",
    "crates/tachyon-app",
]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.1-pre"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }

# 错误处理
thiserror = "2"

# 异步运行时
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "json", "http2"] }

# TLS 测试证书
rcgen = "0.14"

# 哈希
# blake3 启用 `mmap` + `rayon`:整文件校验路径(verify 阶段)用
# `Hasher::update_mmap_rayon`(mmap 零拷贝读 + 多线程哈希,大文件 10-20x 加速)。
# 流式增量 update(下载管线 batch < 128KB)保持单线程 `update`,rayon 反而更慢。
blake3 = { version = "1", features = ["mmap", "rayon"] }
sha2 = "0.11"

# 密码学
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "rand_core"] }
rand = "0.9"

# GPU
wgpu = "29"

# BitTorrent
librqbit = "8"

# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = "2"

# 时间与异步
futures = "0.3"
bytes = "1"

# UUID 与时间
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# 并发
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
dashmap = "6"
parking_lot = "0.12"

# 网络
url = "2"

# 枚举辅助
strum = { version = "0.28", features = ["derive"] }

# 内存分配器
mimalloc = "0.1"

# 开发依赖
proptest = "1"
criterion = { version = "0.8", features = ["html_reports"] }
mockall = "0.13"
rstest = "0.22"
tempfile = "3"
tokio-test = "0.4"
libfuzzer-sys = "0.4"

[package]
name = "tachyon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tachyon 超高性能下载器 基准测试与集成测试入口"
autobenches = true

[[bench]]
name = "buffer_pool"
harness = false

[[bench]]
name = "crypto_hash"
harness = false

[[bench]]
name = "fragment_planning"
harness = false

[[bench]]
name = "hex_encode"
harness = false

[[bench]]
name = "e2e_download"
harness = false

[dev-dependencies]
criterion = { workspace = true }
tachyon-core = { path = "crates/tachyon-core", features = ["test-harness"] }
tachyon-io = { path = "crates/tachyon-io" }
tachyon-engine = { path = "crates/tachyon-engine", features = ["test-harness"] }
tachyon-crypto = { path = "crates/tachyon-crypto" }
tachyon-scheduler = { path = "crates/tachyon-scheduler" }
tachyon-sniffer = { path = "crates/tachyon-sniffer" }
tachyon-store = { path = "crates/tachyon-store" }
blake3 = { workspace = true }
sha2 = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
