[workspace]
resolver = "2"
members = [
    "crates/tachyon-core",
    "crates/tachyon-engine",
    "crates/tachyon-scheduler",
    "crates/tachyon-io",
    "crates/tachyon-protocol",
    "crates/tachyon-sniffer",
    "crates/tachyon-crypto",
    "crates/tachyon-store",
    "crates/tachyon-hub",
    "crates/tachyon-app",
]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理
thiserror = "2"
anyhow = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "json", "http2", "socks"] }

# 哈希
# blake3 启用 `mmap` + `rayon`:整文件校验路径(verify 阶段)用
# `Hasher::update_mmap_rayon`(mmap 零拷贝读 + 多线程哈希,大文件 10-20x 加速)。
# 流式增量 update(下载管线 batch < 128KB)保持单线程 `update`,rayon 反而更慢。
blake3 = { version = "1", features = ["mmap", "rayon"] }
sha2 = "0.11"

# 密码学
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "rand_core"] }
rand = "0.9"

# BitTorrent
librqbit = "8"
librqbit-core = "5"

# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = "2"

# 时间与异步
futures = "0.3"
bytes = "1"

# UUID 与时间
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# 并发
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
dashmap = "6"
parking_lot = "0.12"

# 网络
url = "2"

# 枚举辅助
strum = { version = "0.28", features = ["derive"] }

# 内存分配器
mimalloc = "0.1"

# 平台 FFI
libc = "0.2"

# 开发/测试/bench 专用依赖(非运行时依赖,不被 workspace 成员 crate 引用)
proptest = "1"
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
tempfile = "3"
libfuzzer-sys = "0.4"
# Mock HTTP server:用于 tachyon-protocol/http.rs 的 probe/download_range 等协议层
# 端到端测试(配合 test-harness feature 下的 loopback 放行)。
wiremock = "0.6"
# hyper streaming server:仅 bench 用,测真实 HTTP 节流流式响应(wiremock 不支持
# 字节级节流和 chunked streaming)。无 workspace 成员 crate 直接依赖这些。
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
http-body-util = "0.1"
http-body = "1"

[package]
name = "tachyon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tachyon 超高性能下载器 基准测试与集成测试入口"
autobenches = true

[[bin]]
name = "tachyon-cli"
path = "src/main.rs"

[dependencies]
tachyon-core = { path = "crates/tachyon-core" }
tachyon-engine = { path = "crates/tachyon-engine" }
tachyon-protocol = { path = "crates/tachyon-protocol" }
tachyon-scheduler = { path = "crates/tachyon-scheduler" }
tokio = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bench]]
name = "buffer_pool"
harness = false

[[bench]]
name = "crypto_hash"
harness = false

[[bench]]
name = "fragment_planning"
harness = false

[[bench]]
name = "hex_encode"
harness = false

[[bench]]
name = "e2e_download"
harness = false

[[bench]]
name = "e2e_http_real"
harness = false

[dev-dependencies]
criterion = { workspace = true }
tachyon-core = { path = "crates/tachyon-core", features = ["test-harness"] }
tachyon-io = { path = "crates/tachyon-io" }
tachyon-engine = { path = "crates/tachyon-engine", features = ["test-harness"] }
# bench 需直接用 HttpClient(probe/download_range_stream 等),引入 protocol crate。
# 开 test-harness 联动放行 loopback,使 bench server 绑定 127.0.0.1 可通过 SSRF 校验。
tachyon-protocol = { path = "crates/tachyon-protocol", default-features = false, features = ["test-harness"] }
tachyon-crypto = { path = "crates/tachyon-crypto" }
tachyon-scheduler = { path = "crates/tachyon-scheduler" }
tachyon-store = { path = "crates/tachyon-store" }
# hyper streaming server:bench 的节流流式 HTTP 响应
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
http-body = { workspace = true }
futures = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
bytes = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
