[package]
name = "tachyon-fuzz"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "json", "http2"] }
serde_json = "1"
url = "2"
tachyon-core = { path = "../crates/tachyon-core" }
# 启用 magnet feature:暴露 tachyon_protocol::magnet 模块
# (validate_magnet_uri / parse_pe_from_magnet 纯解析函数,magnet_parse target 用)
tachyon-protocol = { path = "../crates/tachyon-protocol", default-features = false, features = ["magnet"] }

[workspace]

[[bin]]
name = "url_safety"
path = "fuzz_targets/url_safety.rs"
test = false
doc = false

[[bin]]
name = "config_parse"
path = "fuzz_targets/config_parse.rs"
test = false
doc = false

[[bin]]
name = "http_headers"
path = "fuzz_targets/http_headers.rs"
test = false
doc = false

[[bin]]
name = "file_metadata"
path = "fuzz_targets/file_metadata.rs"
test = false
doc = false

[[bin]]
name = "ipc_deserialize"
path = "fuzz_targets/ipc_deserialize.rs"
test = false
doc = false

[[bin]]
name = "magnet_parse"
path = "fuzz_targets/magnet_parse.rs"
test = false
doc = false
