[package]
name = "amd-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HuggingFace Hub API 客户端: 模型文件列表、LFS 解析、Token 管理"

[dependencies]
amd-core = { path = "../amd-core" }
amd-protocol = { path = "../amd-protocol" }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
