[package]
name = "tachyon-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tachyon Tauri 应用入口"

[lib]
name = "tachyon_app_lib"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "tachyon"
path = "src/main.rs"

[features]
default = ["ftp", "quic", "magnet"]
ftp = ["tachyon-engine/ftp", "tachyon-hub/ftp"]
quic = ["tachyon-engine/quic", "tachyon-hub/quic"]
magnet = ["tachyon-engine/magnet"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tachyon-core = { path = "../tachyon-core" }
tachyon-crypto = { path = "../tachyon-crypto" }
tachyon-engine = { path = "../tachyon-engine", default-features = false }
tachyon-hub = { path = "../tachyon-hub", default-features = false }
tachyon-io = { path = "../tachyon-io" }
tachyon-scheduler = { path = "../tachyon-scheduler" }
tachyon-sniffer = { path = "../tachyon-sniffer" }
tachyon-store = { path = "../tachyon-store" }
tauri.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
uuid.workspace = true
chrono.workspace = true
url.workspace = true
dashmap.workspace = true
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2.3.5"
mimalloc.workspace = true

[dev-dependencies]
tempfile.workspace = true
