[package]
name = "tachyon-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tachyon Tauri 应用入口"

[lib]
name = "tachyon_app_lib"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "tachyon"
path = "src/main.rs"

[features]
default = ["magnet"]
magnet = ["tachyon-engine/magnet"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tachyon-core = { path = "../tachyon-core" }
tachyon-engine = { path = "../tachyon-engine", default-features = false }
tachyon-hub = { path = "../tachyon-hub", default-features = false }
tachyon-sniffer = { path = "../tachyon-sniffer" }
tachyon-store = { path = "../tachyon-store" }
tauri.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
uuid.workspace = true
chrono.workspace = true
url.workspace = true
dashmap.workspace = true
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
mimalloc.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
