[package]
name = "tachyon-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tachyon 校验层:哈希与完整性校验"

[dependencies]
tachyon-core = { path = "../tachyon-core" }
blake3.workspace = true
sha2.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
