[package]
name = "tachyon-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tachyon 引擎层:分片引擎、连接管理"

[features]
default = ["tachyon-protocol/magnet"]
magnet = ["tachyon-protocol/magnet", "dep:librqbit"]
# 暴露测试构造器(new_for_test)和 MockProtocol 注入路径,供 bench/集成测试复用。
# 开启后 tachyon-core 的 test-harness(MockProtocol 等)可用。
test-harness = ["tachyon-core/test-harness"]

[dependencies]
tachyon-core = { path = "../tachyon-core" }
tachyon-io = { path = "../tachyon-io" }
tachyon-protocol = { path = "../tachyon-protocol", default-features = false }
tachyon-crypto = { path = "../tachyon-crypto" }
tachyon-scheduler = { path = "../tachyon-scheduler" }
tokio.workspace = true
tokio-stream.workspace = true
bytes.workspace = true
tracing.workspace = true
futures.workspace = true
serde.workspace = true
url.workspace = true
dashmap.workspace = true
librqbit = { workspace = true, optional = true }

[dev-dependencies]
tachyon-core = { path = "../tachyon-core", features = ["test-harness"] }
tachyon-protocol = { path = "../tachyon-protocol", default-features = false, features = ["test-harness"] }
tempfile.workspace = true
tokio-test.workspace = true
proptest.workspace = true
rand.workspace = true
futures.workspace = true
