[package]
name = "tachyon-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tachyon 引擎层:分片引擎、连接管理"

[features]
# default 含 magnet:使 `cargo test -p tachyon-engine` / `cargo llvm-cov -p tachyon-engine`
# 等单 crate 命令自动包含 bt_session 模块及其测试。此前 default 仅开
# tachyon-protocol/magnet(协议层 BT 支持)但不开 engine 自身的 magnet(bt_session
# 模块),导致 bt_session.rs 的 11 个测试在单 crate 命令下不被编译,lcov 显示 0% 覆盖率。
# tachyon-app 用 default-features = false + features = ["magnet"] 显式控制,不受影响。
default = ["magnet"]
magnet = ["tachyon-protocol/magnet", "dep:librqbit", "dep:librqbit-core"]
# 暴露测试构造器(new_for_test)和 MockProtocol 注入路径,供 bench/集成测试复用。
# 开启后 tachyon-core 的 test-harness(MockProtocol 等)可用。
test-harness = ["tachyon-core/test-harness", "tachyon-protocol/test-harness"]

[dependencies]
tachyon-core = { path = "../tachyon-core" }
tachyon-io = { path = "../tachyon-io" }
tachyon-protocol = { path = "../tachyon-protocol", default-features = false }
tachyon-crypto = { path = "../tachyon-crypto" }
tachyon-scheduler = { path = "../tachyon-scheduler" }
tokio.workspace = true
tokio-stream.workspace = true
bytes.workspace = true
tracing.workspace = true
futures.workspace = true
serde.workspace = true
url.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
anyhow.workspace = true
librqbit = { workspace = true, optional = true }
librqbit-core = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tachyon-core = { path = "../tachyon-core", features = ["test-harness"] }
tachyon-protocol = { path = "../tachyon-protocol", default-features = false, features = ["test-harness"] }
# 集成测试(chaos_test 等)需要 new_for_test 测试构造器,需启用 test-harness feature
tachyon-engine = { path = ".", features = ["test-harness"] }
# tokio::time::pause() / advance()(circuit_breaker / mirror 测试用)需 test-util feature
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
proptest.workspace = true
rand.workspace = true
futures.workspace = true
wiremock.workspace = true
