[package]
name = "tachyon-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HuggingFace Hub API 客户端: 模型文件列表、LFS 解析、Token 管理"

[dependencies]
tachyon-core = { path = "../tachyon-core" }
tachyon-protocol = { path = "../tachyon-protocol", default-features = false }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
url.workspace = true
urlencoding = "2"

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
