[package]
name = "tachyon-p2sp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tachyon P2SP 混合下载、Peer 发现"

[dependencies]
tachyon-protocol = { path = "../tachyon-protocol", default-features = false }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio-test.workspace = true
