[package]
name = "tachyon-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tachyon 协议层:HTTP/HTTPS/BitTorrent"

[features]
default = ["magnet"]
magnet = ["dep:librqbit"]
# 测试接缝:暴露 from_handle 等仅供离线集成测试使用的构造器。
# 由下游 crate(tachyon-engine)在 dev-dependencies 中开启,不影响生产编译。
test-harness = []

[dependencies]
tachyon-core = { path = "../tachyon-core" }
reqwest.workspace = true
tokio.workspace = true
bytes.workspace = true
tracing.workspace = true
futures.workspace = true
dashmap.workspace = true
librqbit = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
