[package]
name = "tachyon-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tachyon 协议层:HTTP/HTTPS/BitTorrent"

[features]
default = ["magnet"]
magnet = ["dep:librqbit"]
# 测试接缝:暴露 from_handle 等仅供离线集成测试使用的构造器。
# 由下游 crate(tachyon-engine)在 dev-dependencies 中开启,不影响生产编译。
# 同时开启 tachyon-core/test-harness:放行 SSRF loopback,使 wiremock 端到端
# HTTP 测试可运行。测试代码用 cfg(feature = "test-harness") 检测此状态,
# 跳过"生产模式 SSRF 拒绝 loopback"的断言(因 test-harness 下 loopback 被放行)。
test-harness = ["tachyon-core/test-harness"]
# HTTP/3(QUIC)支持 —— **非默认开启**。
#
# reqwest 的 `http3` feature 标记为 unstable:仅启用本 feature 而未设置
# `RUSTFLAGS='--cfg reqwest_unstable'` 时,reqwest 会触发 compile_error!。
# 因此本 feature 默认关闭,仅在有 QUIC 需求且构建环境支持时显式开启:
#
#     RUSTFLAGS='--cfg reqwest_unstable' cargo build --features tachyon-protocol/http3
#
# 启用后 reqwest 通过 Alt-Svc 协商自动升级到 HTTP/3,失败则回退 HTTP/2(保留
# fallback)。`ConnectionConfig.enable_quic` 为运行时意图开关(默认 true),
# 仅在编译期 http3 feature 可用时生效——见 http.rs 的 #[cfg] 门控。
http3 = ["reqwest/http3"]

[dependencies]
tachyon-core = { path = "../tachyon-core" }
reqwest.workspace = true
tokio.workspace = true
bytes.workspace = true
tracing.workspace = true
futures.workspace = true
dashmap.workspace = true
librqbit = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
wiremock.workspace = true
# 开启自身 test-harness feature(联动开启 tachyon-core/test-harness,放行 SSRF
# loopback),使 wiremock 端到端 HTTP 测试可运行。仅 dev-dependencies,不影响生产。
tachyon-protocol = { path = ".", features = ["test-harness"] }

# 声明 `reqwest_unstable` 为合法的 cfg(由 RUSTFLAGS='--cfg reqwest_unstable' 注入),
# 避免 `unexpected_cfgs` 警告。该 cfg 仅在启用 `http3` feature 时有意义,但 lint
# 配置本身无条件声明是安全的。
[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(reqwest_unstable)"]
